[package]
name = "VulcanEngine_0"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "*"
nalgebra-glm = "0.19.0"
anyhow = "1"
log = "0.4.25"
env_logger = "0.6.1"
png = "0.17"
pretty_env_logger = "0.5"
thiserror = "1"
tobj = { version = "3", features = ["log"] }
vulkanalia = { version = "=0.26.0", features = ["libloading", "provisional", "window"] }
winit = "0.30.12"
varlen = "0.1.2"
varlen_macro = "0.1.3"
glam = "0.30.5"
bevy = "0.16.1"
uuid = "1.18.1"
terrors = "0.3.3"
gltf = "1.4.1"
easy-gltf = { version = "1.1.5", features = ["extras", "names", "vertex-color"] }
bevy_pbr = "0.16.1"
bevy_mesh = "0.16.1"
slab = "0.4.11"
egui_winit_vulkano = "0.28.0"

