[package]
name = "VulcanEngine_0"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
nalgebra = "*"
nalgebra-glm = "0.19.0"
anyhow = "1"
log = "0.4.25"
env_logger = "0.6.1"
png = "0.17"
pretty_env_logger = "0.5"
thiserror = "1"
tobj = { version = "3", features = ["log"] }
vulkanalia = { version = "=0.26.0", features = ["libloading", "provisional", "window"] }

winit = "0.30.12"
varlen = "0.1.2"
varlen_macro = "0.1.3"
bevy = { version = "0.18", default-features = false, features = [
    "bevy_winit", 
    "bevy_core_pipeline", # Optional: if you still want basic app structure
    "x11",                # Required for Linux
    "scene","debug",
] }
slab = "0.4.11"
terrors = "0.3.3"
gltf = "1.4.1"
egui = "0.33.2"
egui-winit = "0.33.2"
epaint = "0.33.2"
itertools = "0.14.0"
mimalloc = "0.1.48"
either = "1.15.0"
glam = "0.31.0"
tracing = "0.1.44"
serde = "1.0.228"

